# ft_transcendence

./: .gitignore  Dockerfile  Makefile  README.md  cert.crt  cert.key  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  filebeat.yml  heartbeat.yml  kibana.yml  logstash.conf  metricbeat.yml  requirements.txt
.devcontainer/grafana/: automatic.yaml
.devcontainer/grafana/dashboards/: main-dashboard.json
.github/workflows/: django.yml
conf/: dashkibana.ndjson  filebeat.yml  heartbeat.yml  index_lifecycle_management.json  indexpattern.json  kibana.yml  logstash.conf  nginx.conf  prometheus.yml
conf/grafana/: alert.yaml  automatic.yaml
conf/grafana/dashboards/: main-dashboard.json
ft_transcendence/: settings.py
ft_transcendence/ft_transcendence/: logger.py  prometheus.py  settings.py  urls.py  wsgi.py
ft_transcendence/ft_transcendence/account/: apps.py  forms.py  models.py  serializers.py  views.py
ft_transcendence/ft_transcendence/account/migrations/: 0001_initial.py  0002_profile_delete_friend_delete_userprofile.py  0002_remove_profile_matches_remove_profile_matches_won_and_more.py
ft_transcendence/ft_transcendence/core/: apps.py  authentication.py  models.py  views.py
ft_transcendence/ft_transcendence/game/: apps.py  models.py  serializers.py  views.py
ft_transcendence/ft_transcendence/static/: style.css
ft_transcendence/tests/: test_ok.py  test_settings.py
tools/: Dockerfile  docker-compose-dev.yml  docker-compose.yml
(+112 files in other folders)
