[tool.poetry]
name = "ft-transcendence"
version = "0.1.0"
description = "The final one"
authors = ["lbiasuz <biasuz.l.leonardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.0"
coverage = "^7.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
